# xwapi

./: ._pytest_status_err.txt  .gitignore  MANIFEST.in  README.md  README_LONG.md  about.md  pyproject.toml  pyproject.xwapi.toml  pytest.ini  requirements.txt
xwlazy/: .gitignore  README.md  SECURITY.md  pyproject.toml  pyproject.xwlazy.toml  pytest.ini  requirements.txt
xwlazy/.github/: workflows-config.yaml
xwlazy/.github/workflows/: publish.yml
xwlazy/benchmarks/: INDEX.md
xwlazy/benchmarks/20260209-benchmark competition/: README.md
xwlazy/benchmarks/20260209-benchmark competition/benchmarks/: BENCH_20251117_0419_COMPETITION.md  BENCH_20251117_0420_COMPETITION.md  BENCH_20251117_0421_COMPETITION.md  BENCH_20251117_0422_COMPETITION.md  BENCH_20251117_0423_COMPETITION.md  BENCH_20251117_0429_COMPETITION.md  BENCH_20251117_0433_COMPETITION.md  BENCH_20251117_0434_COMPETITION.md  BENCH_20251117_0435_COMPETITION.md  BENCH_20251117_0436_COMPETITION.md  BENCH_20251117_0442_COMPETITION.md  BENCH_20251117_0446_COMPETITION.md  BENCH_20251117_0457_COMPETITION.md  BENCH_20251117_0500_COMPETITION.md  BENCH_20251117_0504_COMPETITION.md  BENCH_20251117_0505_COMPETITION.md  BENCH_20251117_1110_COMPETITION.md  BENCH_20251117_1112_COMPETITION.md  BENCH_20251117_1439_COMPETITION.md  BENCH_20251117_1439_COMPETITION_EDGECASES.md  BENCH_20251117_1439_COMPETITION_PREINSTALLED.md  BENCH_20251117_1439_COMPETITION_STRESS.md  BENCH_20251117_1440_COMPETITION_STRESS.md  BENCH_20251117_1441_COMPETITION_STRESS.md  (+29 more)
xwlazy/docs/: GUIDE_01_USAGE.md  INDEX.md  README.md  REF_01_REQ.md  REF_11_COMP.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_50_QA.md  REF_51_TEST.md  REF_54_BENCH.md
xwlazy/docs/changes/: CHANGE_20251115_0000_STRATEGY_REFACTORING.md  CHANGE_20251115_0001_MIGRATION_STATUS.md  CHANGE_20251115_0002_REFACTORING_PROGRESS.md  CHANGE_20251115_0003_REFACTORING_PROPOSAL.md  CHANGE_20251115_0004_REFACTORING_SUMMARY.md  CHANGE_20251119_0000_YAML_CIRCULAR_IMPORT.md  CHANGE_20251122_1520_STRATEGY_REFACTORING.md  CHANGE_20260207_REF11_AND_DOCS.md  CHANGE_20260218_PERSIST_TO_PROJECT.md  IMPLEMENTATION_SUMMARY.md
xwlazy/docs/tests/: TEST_20260311_1936_SUMMARY.md  TEST_20260311_1937_SUMMARY.md  TEST_20260313_0254_SUMMARY.md  TEST_20260314_0533_SUMMARY.md  TEST_20260318_0703_SUMMARY.md  TEST_20260319_0137_SUMMARY.md  TEST_20260322_165920_070_SUMMARY.md  TEST_20260322_170323_601_SUMMARY.md  TEST_20260327_224625_414_SUMMARY.md
xwlazy/scripts/: _scan_imports.py  check_dup_keys.py  sync_top_libs.py  test_sync_verification.py
xwlazy/src/: xwlazy.py  xwlazy_wrapper.py
xwlazy/src/exonware/: __init__.py  xwlazy.py  xwlazy_external_libs.toml  xwlazy_mixins.py  xwlazy_mixins_toml.py
xwlazy/src/xwlazy/: __init__.py  lazy.py
xwlazy/tests/: __init__.py  conftest.py  runner.py  test_auto_install_resolution.py  test_cache_fix.py  test_cache_persistence.py  test_original_issue.py  test_partial_module_strategies.py  test_strategies_direct.py
xwlazy/tests/0.core/: __init__.py  conftest.py  runner.py  test_core_hooking.py  test_core_strategies.py
xwlazy/tests/1.unit/: __init__.py  conftest.py  runner.py  test_config_flag_policies.py  test_install_cache.py  test_installer_methods.py  test_keyword_detection.py  test_lazy_modes.py  test_lazy_public_api.py  test_manifest_async_and_hooks.py  test_mode_performance.py  test_module_strategies.py  test_one_line_api.py  test_optional_mixins.py  test_package_execution_strategies.py  test_package_mapping_strategies.py  test_package_policy_strategies.py  test_package_timing_strategies.py  test_persist_to_project.py  test_scope_auto_lazy_defer.py
xwlazy/tests/2.integration/: __init__.py  runner.py  test_installer_cache_integration.py  test_strategy_integration.py
xwlazy/tests/3.advance/: __init__.py  runner.py  test_async_concurrency.py  test_integration_scenarios.py  test_performance_regression.py  test_production_scenarios.py  test_security.py
xwsyntax/: README.md  SECURITY.md  pyproject.backup.toml  pyproject.toml  pyproject.xwsyntax.toml  pytest.ini  requirements.txt  test_grammars.py
xwsyntax/.github/: workflows-config.yaml
xwsyntax/.github/workflows/: publish.yml
xwsyntax/benchmarks/: INDEX.md
xwsyntax/docs/: GUIDE_01_USAGE.md  INDEX.md  README.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_50_QA.md  REF_51_TEST.md  REF_54_BENCH.md
xwsyntax/docs/_archive/: README.md
xwsyntax/docs/changes/: CHANGELOG.md  VERIFICATION_SUMMARY.md  XWSYNTAX_CRITICAL_FIXES_SUMMARY.md
xwsyntax/docs/logs/: ARCHIVE_MIGRATION_20260208.md
xwsyntax/scripts/: generate_grammar_info.py  rename_grammars.py
xwsyntax/src/: xwsyntax.py
xwsyntax/src/exonware/: __init__.py
xwsyntax/tests/: __init__.py  conftest.py  runner.py  runner_out.md  test_complex_json.json  verify_installation.py
xwsyntax/tests/0.core/: __init__.py  runner.py  runner_out.md  test_core_bidirectional.py  test_core_facade.py  test_import.py  test_ref01_key_code.py
xwsyntax/tests/1.unit/: __init__.py  apache.monarch.ts  conftest.py  cypher.monarch.ts  elasticsearch.monarch.ts  eql.monarch.ts  formdata.monarch.ts  gql.monarch.ts  graphql.monarch.ts  hiveql.monarch.ts  javascript.monarch.ts  json.monarch.ts  json_query.monarch.ts  jsoniq.monarch.ts  julia.monarch.ts  kotlin.monarch.ts  logql.monarch.ts  lucene.monarch.ts  mongodb.monarch.ts  nginx.monarch.ts  php.monarch.ts  promql.monarch.ts  python.monarch.ts  regex.monarch.ts  ruby.monarch.ts  runner.py  runner_out.md  rust.monarch.ts  scala.monarch.ts  sql.monarch.ts  swift.monarch.ts  test_all_grammars.py  test_multiformat_grammars.py  test_new_syntax_facade.py  test_xwnode_integration.py  typescript.monarch.ts  wasm.monarch.ts  xpath.monarch.ts  xquery.monarch.ts  xslt.monarch.ts  (+1 more)
xwsyntax/tests/2.integration/: __init__.py  conftest.py  runner.py  runner_out.md  test_end_to_end.py
xwsyntax/tests/3.advance/: __init__.py  runner.py  test_performance.py  test_security.py
(+3320 files in other folders)
