
# Source size (src/*): ~365.8 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwapi"
  dynamic = ["version"]
  description = "Entity-to-Web-API conversion library: Python framework that turns internal configuration, service functions, and entities into production-ready APIs using FastAPI, with minimal boilerplate"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["api", "fastapi", "openapi", "rest", "graphql", "oauth2", "exonware"]
  classifiers = []
  dependencies = []
  "fastapi>" = "0.104.0\","
  "uvicorn[standard]>" = "0.24.0\","
  "requests>" = "2.28.0\","
  authors = []
  "{{name" = "eXonware Backend Team"

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    dev = []
    "pytest>" = "7.0.0\","
    "pytest-asyncio>" = "0.21.0\","
    "pytest-cov>" = "4.0.0\","
    "black>" = "23.0.0\","
    "isort>" = "5.12.0\","
    "mypy>" = "1.0.0\","
    lazy = []
    full = ["cachebox", "cachetools", "pylru", "msgspec", "orjson", "hyperlight_hyperjson", "json5", "tomli-w", "xmltodict", "dicttoxml", "msgpack", "cbor2", "pymongo", "httpx", "brotli", "zstandard", "rich", "attrs", "tomli", "brotlicffi", "chardet", "simplejson", "socks", "PyJWT", "aiohttp", "aiodns", "numpy", "scikit-learn", "cython", "lz4", "uarray", "pandas", "pyarrow", "cloudpickle", "pytz", "numexpr", "bottleneck", "a2wsgi", "lark", "regex", "atomicwrites", "interegular", "python-multipart"]

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xwapi"
    Documentation = "https://github.com/exonware/xwapi#readme"

[tool]

  [tool.black]
    line-length = 88
    target-version = ["py312"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "3.12"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      addopts = "-v --tb=short"
      markers = []

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwapi/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
