# Source size (src/*): ~348.9 KB
[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwlazy"
dynamic = ["version"]
description = "Automation tool for missing-import dependency resolution with lazy install/loading across the eXonware suite."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
  "automation",
  "developer-productivity",
  "dependency-automation",
  "missing-imports",
  "lazy-import",
  "auto-install",
  "import-hook",
  "exonware",
  "xwlazy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pip",
]
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwlazy"
Documentation = "https://github.com/exonware/xwlazy#readme"
Subtree = "https://github.com/Exonware/XWLazy.git"

[tool.hatch.version]
path = "src/exonware/xwlazy/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware", "src/xwlazy"]
include = ["src/xwlazy.py", "src/exonware/xwlazy_external_libs.toml"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
