# project-src-size=764928 ; ~0.73 MB
# total = src + deps — refresh sizes: run tools/ci/python_scripts/measure_dependency_sizes.py xwsyntax (monorepo commands)
# Source size (src/*): ~747.3 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwsyntax"
dynamic = ["version"]
description = "Universal grammar engine: bidirectional parsing and generation for 100+ syntax formats (328+ grammar files)"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["grammar", "parsing", "bidirectional", "syntax", "exonware"]
classifiers = []
dependencies = [
    "exonware-xwlazy",
    "exonware-xwnode",
    "exonware-xwsystem",
    "lark>=1.1.0",
]
authors = [{ name = "eXonware Backend Team" }]

[project.license]
text = "MIT"

[project.optional-dependencies]
lazy = [
    "exonware-xwlazy",
    "exonware-xwnode",
    "exonware-xwsystem[lazy]",
]
dev = [
    "exonware-xwlazy",
    "exonware-xwnode",
    "exonware-xwsystem",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
]
full = [
    "exonware-xwlazy",
    "exonware-xwnode",
    "exonware-xwsystem",
    "cbor2>=5.0.0",
    "httpx>=0.23.0",
    "lark>=1.1.0",
    "msgpack>=1.0.0",
    "pygls>=1.0.0",
    "pyjson5>=1.0.0",
    "pytest_insta",
    "tree-sitter>=0.20.0",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwsyntax"
Documentation = "https://github.com/exonware/xwsyntax#readme"
Subtree = "https://github.com/exonware/xwsyntax.git"

# Dependency sizes: run measure_dependency_sizes / update_config per GUIDE_42_CONFIG_PY.

[tool.hatch.version]
path = "src/exonware/xwsyntax/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
